tools/toolchain-tester/examples/compile-fail/hello_world.cpp
#include <core_net/core_net.hpp>
#include <iostream>
using namespace core_net;

CONTRACT hello : public contract {
   public:
      using contract::contract;

      ACTION hi( name nm );
      ACTION check( name nm );

      using hi_action = action_wrapper<"hi"_n, &hello::hi>;
      using check_action = action_wrapper<"check"_n, &hello::check>;
};

ACTION hello::hi( name nm ) {
   print_f("Name : %\n", nm);
}

ACTION hello::check( name nm ) {
   print_f("Name : %\n", nm);
   core_net::check(nm == "hello"_n, "check name not equal to `hello`");
}
